[package]
name = "code-runner"
version = "1.0.0"
edition = "2021"
authors = ["Ranjit<ranjitbhandary15@gmail.com"]
description = "Universal code runner for 35+ programming languages for zed"
license = "MIT"
repository = "https://github.com/Coder-Delta/code-runner"
keywords = ["code", "runner", "executor", "compiler", "interpreter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wait-timeout = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "code-runner"
path = "src/main.rs"

[lib]
name = "code_runner"
path = "src/lib.rs"